--- a/action.yml
+++ b/action.yml
@@ -3,3 +3,10 @@ description: 'Builds a Stepup app for running tests'
 runs:
   using: 'docker'
   image: 'Dockerfile'
+inputs:
+  php_version: 
+    description: 'PHP version'
+    default: 'php72'
+  node_version:
+    description: 'Node version'
+    default: 'node16'
