PHP82: We need zip

--- a/php82-node20/Dockerfile
+++ b/php82-node20/Dockerfile
@@ -1,3 +1,5 @@
 FROM ghcr.io/openconext/openconext-basecontainers/php82-apache2-node20-composer2:latest
+RUN apt-get update && \
+  apt-get install -y zip
 COPY entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/entrypoint.sh"]
